--- a/island-of-pleasure.json
+++ b/island-of-pleasure.json
@@ -1,5 +1,5 @@
 {
-    "name": "Island of Pleasure TOP200",
+    "name": "IOP-TOP200",
     "downloads": [
         {
             "title": "Вечность / Eternum v.0.8.5 Public + Multi Mod (2021) (Rus/Eng) Ren'Py Linux Android Caribdis",
